--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Main path for all ARR apps:
-ARRPATH=/media/Arr/  # in Windows it will be sth like ARRPATH=C:\myfolder\Arr\
+ARRPATH=/mnt/NAS-DATA/
 
 # Global Variables
 PUID=1000
 PGID=1000
-TZ=Europe/London
+TZ=Europe/Warsaw
 
