--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,119 +1,167 @@
-services:       
+services:
 
-# ██████╗ ██████╗  ██████╗ ██╗    ██╗██╗      █████╗ ██████╗ ██████╗ 
-# ██╔══██╗██╔══██╗██╔═══██╗██║    ██║██║     ██╔══██╗██╔══██╗██╔══██╗
+
+#  ██████╗ ██╗      ██╗   ██╗███████╗████████╗██╗   ██╗███╗   ██╗
+# ██╔════╝ ██║      ██║   ██║██╔════╝╚══██╔══╝██║   ██║████╗  ██║
+# ██║  ███╗██║      ██║   ██║█████╗     ██║   ██║   ██║██╔██╗ ██║
+# ██║   ██║██║      ██║   ██║██╔══╝     ██║   ██║   ██║██║╚██╗██║
+# ╚██████╔╝███████╗╚██████╔╝███████╗   ██║   ╚██████╔╝██║ ╚████║
+#  ╚═════╝ ╚══════╝ ╚═════╝ ╚══════╝   ╚═╝    ╚═════╝ ╚═╝  ╚═══╝
+  gluetun:
+    image: qmcgaw/gluetun
+    container_name: gluetun
+    ports:
+      - 6789:6789     # NZBGet
+      # - 9696:9696   # Prowlarr - Port is on the service itself
+      # - 8989:8989   # Sonarr - Port is on the service itself
+      # - 7878:7878   # Radarr - Port is on the service itself
+      # - 5055:5055   # JellySeerr - Port is on the service itself
+      - 8080:8080     # QBittorrent
+      - 6881:6881     # QBittorrent
+      - 6881:6881/udp # QBittorrent
+    cap_add:
+      - NET_ADMIN
+    devices:
+      - /dev/net/tun:/dev/net/tun
+    environment:
+      - VPN_SERVICE_PROVIDER=privado
+      - VPN_TYPE=wireguard
+      - OPENVPN_USER=nhtkryxkftml
+      - OPENVPN_PASSWORD=4UjRo>T!*^m=
+      - SERVER_COUNTRIES=Netherlands
+
+
+
+
+# ██████╗ ██████╗  ██████╗ ██╗   ██╗██╗      █████╗ ██████╗ ██████╗
+# ██╔══██╗██╔══██╗██╔═══██╗██║   ██║██║     ██╔══██╗██╔══██╗██╔══██╗
 # ██████╔╝██████╔╝██║   ██║██║ █╗ ██║██║     ███████║██████╔╝██████╔╝
 # ██╔═══╝ ██╔══██╗██║   ██║██║███╗██║██║     ██╔══██║██╔══██╗██╔══██╗
 # ██║     ██║  ██║╚██████╔╝╚███╔███╔╝███████╗██║  ██║██║  ██║██║  ██║
-# ╚═╝     ╚═╝  ╚═╝ ╚═════╝  ╚══╝╚══╝ ╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═
-                              
+# ╚═╝     ╚═╝  ╚═╝ ╚═════╝  ╚══╝╚══╝ ╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
   prowlarr:
     image: linuxserver/prowlarr:latest
     container_name: prowlarr
-    hostname: prowlarr
+    #network_mode: "service:gluetun"
+    ports:
+      - 9696:9696
     volumes:
       - ${ARRPATH}Prowlarr/config:/config
       - ${ARRPATH}Prowlarr/backup:/data/Backup
       - ${ARRPATH}Downloads:/downloads
-    ports:
-      - 9696:9696
     restart: unless-stopped
     env_file:
       - '.env'
-      
-# ███████╗ ██████╗ ███╗   ██╗ █████╗ ██████╗ ██████╗ 
-# ██╔════╝██╔═══██╗████╗  ██║██╔══██╗██╔══██╗██╔══██╗
-# ███████╗██║   ██║██╔██╗ ██║███████║██████╔╝██████╔╝
-# ╚════██║██║   ██║██║╚██╗██║██╔══██║██╔══██╗██╔══██╗
+
+# ███████╗ ██████╗ ███╗   ██╗ █████╗ ██████╗ ██████╗
+# ██╔════╝██╔═══██╗████╗  ██║██╔══██╗██╔══██╗██╔══██╗
+# ███████╗██║   ██║██╔██╗ ██║███████║██████╔╝██████╔╝
+# ╚════██║██║   ██║██║╚██╗██║██╔══██║██╔══██╗██╔══██╗
 # ███████║╚██████╔╝██║ ╚████║██║  ██║██║  ██║██║  ██║
-# ╚══════╝ ╚═════╝ ╚═╝  ╚═══╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝                                                 
-      
+# ╚══════╝ ╚═════╝ ╚═╝  ╚═══╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
   sonarr:
     image: linuxserver/sonarr:latest
     container_name: sonarr
-    hostname: sonarr
+    #network_mode: "service:gluetun"
+    ports:
+      - 8989:8989
     volumes:
       - ${ARRPATH}Sonarr/config:/config
       - ${ARRPATH}Sonarr/backup:/data/Backup
       - ${ARRPATH}Sonarr/tvshows:/data/tvshows
       - ${ARRPATH}Downloads:/downloads
-    ports:
-      - 8989:8989
     restart: unless-stopped
     env_file:
       - '.env'
-      
-# ██████╗  █████╗ ██████╗  █████╗ ██████╗ ██████╗ 
-# ██╔══██╗██╔══██╗██╔══██╗██╔══██╗██╔══██╗██╔══██╗
-# ██████╔╝███████║██║  ██║███████║██████╔╝██████╔╝
-# ██╔══██╗██╔══██║██║  ██║██╔══██║██╔══██╗██╔══██╗
-# ██║  ██║██║  ██║██████╔╝██║  ██║██║  ██║██║  ██║
-# ╚═╝  ╚═╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝                                              
 
+# ██████╗  █████╗ ██████╗  █████╗ ██████╗ ██████╗
+# ██╔══██╗██╔══██╗██╔══██╗██╔══██╗██╔══██╗██╔══██╗
+# ██████╔╝███████║██║  ██║███████║██████╔╝██████╔╝
+# ██╔══██╗██╔══██║██║  ██║██╔══██║██╔══██╗██╔══██╗
+# ██║  ██║██║  ██║██████╔╝██║  ██║██║  ██║██║  ██║
+# ╚═╝  ╚═╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
   radarr:
     image: linuxserver/radarr:latest
     container_name: radarr
-    hostname: radarr
+    #network_mode: "service:gluetun"
+    ports:
+      - 7878:7878
     volumes:
       - ${ARRPATH}Radarr/config:/config
       - ${ARRPATH}Radarr/movies:/data/movies
       - ${ARRPATH}Radarr/backup:/data/Backup
       - ${ARRPATH}Downloads:/downloads
-    ports:
-      - 7878:7878
-    restart: unless-stopped
-    env_file:
-      - '.env'
-      
-# ██╗     ██╗██████╗  █████╗ ██████╗ ██████╗ 
-# ██║     ██║██╔══██╗██╔══██╗██╔══██╗██╔══██╗
-# ██║     ██║██║  ██║███████║██████╔╝██████╔╝
-# ██║     ██║██║  ██║██╔══██║██╔══██╗██╔══██╗
-# ███████╗██║██████╔╝██║  ██║██║  ██║██║  ██║
-# ╚══════╝╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
-                                             
-  lidarr:
-    image: linuxserver/lidarr:latest
-    container_name: lidarr
-    hostname: lidarr
-    volumes:
-      - ${ARRPATH}Lidarr/config:/config
-      - ${ARRPATH}Lidarr/music:/data/musicfolder
-      - ${ARRPATH}Downloads:/downloads
-    ports:
-      - 8686:8686
-    restart: unless-stopped
-    env_file:
-      - '.env'
-      
-# ██████╗ ███████╗ █████╗ ██████╗  █████╗ ██████╗ ██████╗ 
-# ██╔══██╗██╔════╝██╔══██╗██╔══██╗██╔══██╗██╔══██╗██╔══██╗
-# ██████╔╝█████╗  ███████║██║  ██║███████║██████╔╝██████╔╝
-# ██╔══██╗██╔══╝  ██╔══██║██║  ██║██╔══██║██╔══██╗██╔══██╗
-# ██║  ██║███████╗██║  ██║██████╔╝██║  ██║██║  ██║██║  ██║
-# ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
-                                                                                                                   
-  readarr:
-    image: linuxserver/readarr:develop
-    container_name: readarr
-    hostname: readarr
-    volumes:
-      - ${ARRPATH}Readarr/config:/config
-      - ${ARRPATH}Readarr/books:/data/books
-      - ${ARRPATH}Downloads:/downloads
-    ports:
-      - 8787:8787
     restart: unless-stopped
     env_file:
       - '.env'
 
-# ██╗  ██╗ ██████╗ ███╗   ███╗ █████╗ ██████╗ ██████╗ 
+# ██████╗  █████╗ ███████╗ █████╗ ██████╗ ██████╗
+# ██╔══██╗██╔══██╗╚══███╔╝██╔══██╗██╔══██╗██╔══██╗
+# ██████╔╝███████║  ███╔╝ ███████║██████╔╝██████╔╝
+# ██╔══██╗██╔══██║ ███╔╝  ██╔══██║██╔══██╗██╔══██╗
+# ██████╔╝██║  ██║███████╗██║  ██║██║  ██║██║  ██║
+# ╚═════╝ ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
+  bazarr:
+    image: lscr.io/linuxserver/bazarr:latest
+    container_name: bazarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+    volumes:
+      - ${ARRPATH}Bazarr/config:/config
+      - ${ARRPATH}Radarr/movies:/movies
+      - ${ARRPATH}Sonarr/tvshows:/tv
+    ports:
+      - 6767:6767
+    restart: unless-stopped
+
+# ██╗      ██╗██████╗  █████╗ ██████╗ ██████╗
+# ██║      ██║██╔══██╗██╔══██╗██╔══██╗██╔══██╗
+# ██║      ██║██║  ██║███████║██████╔╝██████╔╝
+# ██║      ██║██║  ██║██╔══██║██╔══██╗██╔══██╗
+# ███████╗██║██████╔╝██║  ██║██║  ██║██║  ██║
+# ╚══════╝╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
+#  lidarr:
+#    image: linuxserver/lidarr:latest
+#    container_name: lidarr
+#    #network_mode: "service:gluetun"
+#    ports:
+#      - 8686:8686
+#    volumes:
+#      - ${ARRPATH}Lidarr/config:/config
+#      - ${ARRPATH}Lidarr/music:/data/musicfolder
+#      - ${ARRPATH}Downloads:/downloads
+#    restart: unless-stopped
+#    env_file:
+#      - '.env'
+
+# ██████╗ ███████╗ █████╗ ██████╗  █████╗ ██████╗ ██████╗
+# ██╔══██╗██╔════╝██╔══██╗██╔══██╗██╔══██╗██╔══██╗██╔══██╗
+# ██████╔╝█████╗   ███████║██║  ██║███████║██████╔╝██████╔╝
+# ██╔══██╗██╔══╝   ██╔══██║██║  ██║██╔══██║██╔══██╗██╔══██╗
+# ██║  ██║███████╗██║  ██║██████╔╝██║  ██║██║  ██║██║  ██║
+# ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
+#  readarr:
+#    image: linuxserver/readarr:develop
+#    container_name: readarr
+#    #network_mode: "service:gluetun"
+#    ports:
+#      - 8787:8787
+#    volumes:
+#      - ${ARRPATH}Readarr/config:/config
+#      - ${ARRPATH}Readarr/books:/data/books
+#      - ${ARRPATH}Downloads:/downloads
+#    restart: unless-stopped
+#    env_file:
+#      - '.env'
+
+# ██╗  ██╗ ██████╗ ███╗   ███╗ █████╗ ██████╗ ██████╗
 # ██║  ██║██╔═══██╗████╗ ████║██╔══██╗██╔══██╗██╔══██╗
 # ███████║██║   ██║██╔████╔██║███████║██████╔╝██████╔╝
 # ██╔══██║██║   ██║██║╚██╔╝██║██╔══██║██╔══██╗██╔══██╗
-# ██║  ██║╚██████╔╝██║ ╚═╝ ██║██║  ██║██║  ██║██║  ██║
-# ╚═╝  ╚═╝ ╚═════╝ ╚═╝     ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
-        
+# ██║  ██║╚██████╔╝██║ ╚═╝ ██║██║  ██║██║  ██║██║  ██║
+# ╚═╝  ╚═╝ ╚═════╝ ╚═╝     ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
   homarr:
     container_name: homarr
     image: ghcr.io/ajnart/homarr:latest
@@ -127,51 +175,103 @@ services:
     env_file:
       - '.env'
 
-#      ██╗███████╗██╗     ██╗  ██╗   ██╗███████╗██╗███╗   ██╗
-#      ██║██╔════╝██║     ██║  ╚██╗ ██╔╝██╔════╝██║████╗  ██║
-#      ██║█████╗  ██║     ██║   ╚████╔╝ █████╗  ██║██╔██╗ ██║
-# ██   ██║██╔══╝  ██║     ██║    ╚██╔╝  ██╔══╝  ██║██║╚██╗██║
-# ╚█████╔╝███████╗███████╗███████╗██║   ██║     ██║██║ ╚████║
-#  ╚════╝ ╚══════╝╚══════╝╚══════╝╚═╝   ╚═╝     ╚═╝╚═╝  ╚═══╝
-     
-  jellyfin:
-    image: linuxserver/jellyfin
-    container_name: jellyfin
-    ports:
-      - '8096:8096/tcp'   # Jellyfin web interface
-      - '7359:7359/udp'   # Network discovery
-      - '1900:1900/udp'   # DLNA port
+# ███████╗███╗   ██╗██████╗  ██╗   ██╗
+# ██╔════╝████╗ ████║██╔══██╗ ╚██╗ ██╔╝
+# █████╗  ██╔████╔██║██████╔╝  ╚████╔╝
+# ██╔══╝  ██║╚██╔╝██║██╔══██╗   ╚██╔╝
+# ███████╗██║ ╚═╝ ██║██████╔╝    ██║
+# ╚══════╝╚═╝     ╚═╝╚═════╝     ╚═╝
+  emby:
+    image: lscr.io/linuxserver/emby:latest
+    container_name: emby
     volumes:
-      - ${ARRPATH}Jellyfin/config:/config
-      - ${ARRPATH}Radarr/movies:/data/Movies
-      - ${ARRPATH}Sonarr/tvshows:/data/TVShows
-      - ${ARRPATH}Lidarr/music:/data/Music
-      - ${ARRPATH}Readarr/books:/data/Books
+      - ${ARRPATH}Emby/config:/config
+      - ${ARRPATH}Radarr/movies:/data/movies
+      - ${ARRPATH}Sonarr/tvshows:/data/tvshows
+      - /mnt/usbMedia01:/mnt/usbMedia01
+      - /mnt/usbMedia02:/mnt/usbMedia02
+      - /mnt/usbMedia03:/mnt/usbMedia03
+    ports:
+      - 8096:8096
+      - 8920:8920
+    restart: unless-stopped
     env_file:
       - '.env'
+
+#     ██╗███████╗██╗     ██╗  ██╗   ██╗███████╗███████╗███████╗██████╗ ██████╗
+#     ██║██╔════╝██║     ██║  ╚██╗ ██╔╝██╔════╝██╔════╝██╔════╝██╔══██╗██╔══██╗
+#     ██║█████╗  ██║     ██║   ╚████╔╝ ███████╗█████╗  █████╗  ██████╔╝██████╔╝
+# ██  ██║██╔══╝  ██║     ██║    ╚██╔╝  ╚════██║██╔══╝  ██╔══╝  ██╔══██╗██╔══██╗
+# ╚█████╔╝███████╗███████╗███████╗██║   ███████║███████╗███████╗██║  ██║██║  ██║
+#  ╚════╝ ╚══════╝╚══════╝╚══════╝╚═╝   ╚══════╝╚══════╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝
+  jellyseerr:
+    image: fallenbagel/jellyseerr:latest
+    container_name: jellyseerr
+    #network_mode: "service:gluetun"
+    ports:
+      - 5055:5055
+    volumes:
+      - ${ARRPATH}JellySeerr/config:/app/config
     restart: unless-stopped
-          
-#  ██████╗ ██████╗ ██╗████████╗████████╗ ██████╗ ██████╗ ██████╗ ███████╗███╗   ██╗████████╗
+    env_file:
+      - '.env'
+
+#   ██████╗  █████╗ ██╗      ██╗██████╗  ██████╗  ███████╗
+#  ██╔════╝ ██╔══██╗██║      ██║██╔══██╗ ██╔══██╗ ██╔════╝
+#  ██║     ███████║██║      ██║██████╔╝ ██████╔╝ █████╗
+#  ██║     ██╔══██║██║      ██║██╔══██╗ ██╔══██╗ ██╔══╝
+#  ╚██████╗██║  ██║███████╗ ██║██████╔╝ ██║  ██║ ███████╗
+#   ╚═════╝╚═╝  ╚═╝╚══════╝ ╚═╝╚═════╝  ╚═╝  ╚═╝ ╚══════╝
+#  calibre:
+#    image: lscr.io/linuxserver/calibre:latest
+#    container_name: calibre
+#    volumes:
+#      - ${ARRPATH}Calibre/config:/config
+#      - ${ARRPATH}Readarr/books:/data/Books
+#      - /mnt/usbMedia01:/mnt/usbMedia01
+#      - /mnt/usbMedia02:/mnt/usbMedia02
+#      - /mnt/usbMedia03:/mnt/usbMedia03
+#    ports:
+#      - 8080:8080
+#      - 8181:8181
+#      - 8081:8081
+#    restart: unless-stopped
+
+# ██████╗ ██╗    ███████╗██╗  ██╗
+# ██╔══██╗██║    ██╔════╝╚██╗██╔╝
+# ██████╔╝██║    █████╗    ╚███╔╝
+# ██╔═══╝ ██║    ██╔══╝    ██╔██╗
+# ██║     ███████╗███████╗██╔╝ ██╗
+# ╚═╝     ╚══════╝╚══════╝╚═╝  ╚═╝
+#  plex:
+#    image: lscr.io/linuxserver/plex:latest
+#    container_name: plex
+#    network_mode: host
+#    environment:
+#      - VERSION=docker
+#      - PLEX_CLAIM= #optional
+#    volumes:
+#      - ${ARRPATH}Plex/config:/config
+#      - ${ARRPATH}Radarr/movies:/data/Movies
+#      - ${ARRPATH}Sonarr/tvshows:/data/TVShows
+#    restart: unless-stopped
+
+# ██████╗ ██████╗ ██╗████████╗████████╗ ██████╗ ██████╗ ██████╗ ███████╗███╗   ██╗████████╗
 # ██╔═══██╗██╔══██╗██║╚══██╔══╝╚══██╔══╝██╔═══██╗██╔══██╗██╔══██╗██╔════╝████╗  ██║╚══██╔══╝
-# ██║   ██║██████╔╝██║   ██║      ██║   ██║   ██║██████╔╝██████╔╝█████╗  ██╔██╗ ██║   ██║   
-# ██║▄▄ ██║██╔══██╗██║   ██║      ██║   ██║   ██║██╔══██╗██╔══██╗██╔══╝  ██║╚██╗██║   ██║   
-# ╚██████╔╝██████╔╝██║   ██║      ██║   ╚██████╔╝██║  ██║██║  ██║███████╗██║ ╚████║   ██║   
-#  ╚══▀▀═╝ ╚═════╝ ╚═╝   ╚═╝      ╚═╝    ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═══╝   ╚═╝                                                                                          
-                                                                                             
+# ██║   ██║██████╔╝██║   ██║      ██║   ██║   ██║██████╔╝██████╔╝█████╗  ██╔██╗ ██║   ██║
+# ██║▄▄ ██║██╔══██╗██║   ██║      ██║   ██║   ██║██╔══██╗██╔══██╗██╔══╝  ██║╚██╗██║   ██║
+# ╚██████╔╝██████╔╝██║   ██║      ██║   ╚██████╔╝██║  ██║██║  ██║███████╗██║ ╚████║   ██║
+#  ╚══▀▀═╝ ╚═════╝ ╚═╝   ╚═╝      ╚═╝    ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═══╝   ╚═╝
   qbittorrent:
     image: linuxserver/qbittorrent:latest
     container_name: qbittorrent
-    hostname: qbittorrent
+    network_mode: "service:gluetun"
     restart: unless-stopped
     labels:
       - "com.centurylinklabs.watchtower.enable=false"
     volumes:
       - ${ARRPATH}qbittorrent/config:/config
       - ${ARRPATH}Downloads:/downloads
-    ports:
-      - 8080:8080
-      - 6881:6881
-      - 6881:6881/udp
     environment:
       - WEBUI_PORT=8080
       - TORRENTING_PORT=6881
@@ -180,3 +280,43 @@ services:
     env_file:
       - '.env'
 
+# ██████╗   ██████╗ ████████╗
+# ██╔══██╗  ██╔══██╗╚══██╔══╝
+# ██║  ██║  ██║  ██║   ██║
+# ██████╔╝  ██║  ██║   ██║
+# ██╔══██╗  ██╔══██╗   ██║
+# ██║  ████╗██████╔╝   ██║
+# ╚═╝  ╚═══╝╚═════╝    ╚═╝
+  rdt-client:
+    image: rogerfar/rdt-client:latest
+    container_name: rdt-client
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+    volumes:
+      - ${ARRPATH}rdt-client/config:/config
+      - ${ARRPATH}Downloads:/data/downloads
+    ports:
+      - 6500:6500
+    restart: unless-stopped
+
+# ███╗   ██╗███████╗██████╗  ██████╗ ███████╗████████╗
+# ████╗  ██║╚══███╔╝██╔══██╗██╔════╝ ██╔════╝╚══██╔══╝
+# ██╔██╗ ██║  ███╔╝ ██████╔╝██║  ███╗█████╗     ██║
+# ██║╚██╗██║ ███╔╝  ██╔══██╗██║   ██║██╔══╝     ██║
+# ██║ ╚████║███████╗██████╔╝╚██████╔╝███████╗   ██║
+# ╚═╝  ╚═══╝╚══════╝╚═════╝  ╚═════╝ ╚══════╝   ╚═╝
+  nzbget:
+    image: lscr.io/linuxserver/nzbget:latest
+    container_name: nzbget
+    network_mode: "service:gluetun"
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - NZBGET_USER=admin #optional
+      - NZBGET_PASS=J@7713 #optional
+    volumes:
+      - ${ARRPATH}nzbget/config:/config
+      - ${ARRPATH}Downloads:/downloads
+    restart: unless-stopped
