--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ PUID=1000
 PGID=1000
 TZ=Europe/Warsaw
 
+# --- Gluetun VPN Credentials ---
+# The 'gluetun' service will read these two lines to log into your FastVPN account.
+OPENVPN_USER=YOUR_FASTVPN_USERNAME
+OPENVPN_PASSWORD=YOUR_FASTVPN_PASSWORD
