--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ TZ=Europe/Warsaw
 
 # --- Gluetun VPN Credentials ---
 # The 'gluetun' service will read these two lines to log into your FastVPN account.
-OPENVPN_USER=YOUR_FASTVPN_USERNAME
-OPENVPN_PASSWORD=YOUR_FASTVPN_PASSWORD
+OPENVPN_USER=ncpt3kkn0@namecheap
+OPENVPN_PASSWORD=eQre9DsgT
