--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,9 @@ services:
       - VPN_TYPE=openvpn
       - OPENVPN_CUSTOM_CONFIG=/gluetun/NCVPN-PL-Warsaw-TCP.ovpn
       - OPENVPN_USER=${OPENVPN_USER}
-      - OPENVPN_PASSWORD=${OPENVPN_PASSWORD}
-      - DNS_ADDRESS=8.8.8.8
+      - OPENVPN_PASSWORD=${OPENVPN_PASSWORD
       - OPENVPN_RESOLVE_HOSTNAME=on
+      - OPENVPN_PROTOCOL=tcp
     restart: unless-stopped
 
 # ███╗   ██╗███████╗██████╗  ██████╗ ███████╗████████╗
