--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - OPENVPN_PASSWORD=${OPENVPN_PASSWORD}
       - OPENVPN_RESOLVE_HOSTNAME=on
       - OPENVPN_PROTOCOL=tcp
+      - FIREWALL_LOCAL_SUBNETS=192.168.1.0/24,10.20.10.0/24
     restart: unless-stopped
 
 # ███╗   ██╗███████╗██████╗  ██████╗ ███████╗████████╗
