--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     image: qmcgaw/gluetun
     container_name: gluetun
     ports:
-      - 6789:6789      # NZBGet
+###      - 6789:6789      # NZBGet
       # - 9696:9696    # Prowlarr - Port is on the service itself
       # - 8989:8989    # Sonarr - Port is on the service itself
       # - 7878:7878    # Radarr - Port is on the service itself
       # - 5055:5055    # JellySeerr - Port is on the service itself
-      - 8080:8080      # QBittorrent
-      - 6881:6881      # QBittorrent
-      - 6881:6881/udp # QBittorrent
+###      - 8080:8080      # QBittorrent
+###      - 6881:6881      # QBittorrent
+###      - 6881:6881/udp # QBittorrent
     cap_add:
       - NET_ADMIN
     devices:
@@ -53,7 +53,7 @@ services:
   nzbget:
     image: lscr.io/linuxserver/nzbget:latest
     container_name: nzbget
-    network_mode: "service:gluetun"
+#    network_mode: "service:gluetun"
     environment:
       - NZBGET_USER=admin #optional
       - NZBGET_PASS=J@77113 #optional
@@ -73,7 +73,7 @@ services:
   qbittorrent:
     image: linuxserver/qbittorrent:latest
     container_name: qbittorrent
-    network_mode: "service:gluetun"
+#    network_mode: "service:gluetun"
     restart: unless-stopped
     labels:
       - "com.centurylinklabs.watchtower.enable=false"
