--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,16 +36,16 @@ services:
      # - OPENVPN_CUSTOM_CONFIG=/gluetun/NCVPN-PL-Warsaw-TCP.ovpn
       - OPENVPN_USER=${OPENVPN_USER}
       - OPENVPN_PASSWORD=${OPENVPN_PASSWORD}
-      - OPENVPN_RESOLVE_HOSTNAME=on
-      - OPENVPN_PROTOCOL=tcp
+    #  - OPENVPN_RESOLVE_HOSTNAME=on
+    #  - OPENVPN_PROTOCOL=tcp
     #  - FIREWALL_LOCAL_SUBNETS=192.168.1.0/24
-      - DOT=off
-      - DOT_PROVIDERS=quad9
-      - DNS_ADDRESS=1.1.1.1
-      - HEALTH_TARGET_ADDRESS=1.1.1.1:53
-      - HEALTH_VPN_DURATION_INITIAL=30s
-      - LOG_LEVEL=debug
-      - OPENVPN_VERBOSITY=3
+    #  - DOT=off
+     # - DOT_PROVIDERS=quad9
+    #  - DNS_ADDRESS=1.1.1.1
+    #  - HEALTH_TARGET_ADDRESS=1.1.1.1:53
+    #  - HEALTH_VPN_DURATION_INITIAL=30s
+    #  - LOG_LEVEL=debug
+    #  - OPENVPN_VERBOSITY=3
     restart: unless-stopped
 
 # ███╗   ██╗███████╗██████╗  ██████╗ ███████╗████████╗
