--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - OPENVPN_PASSWORD=${OPENVPN_PASSWORD}
     #  - OPENVPN_RESOLVE_HOSTNAME=on
     #  - OPENVPN_PROTOCOL=tcp
-      - FIREWALL_OUTBOUND_SUBNETS=192.168.1.0/24,10.20.10.27
+      - FIREWALL_OUTBOUND_SUBNETS=192.168.1.0/24,10.20.10.27/32
     #  - DOT=off
      # - DOT_PROVIDERS=quad9
     #  - DNS_ADDRESS=1.1.1.1
