--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,8 @@ services:
     environment:
       - WEBUI_PORT=8080
       - TORRENTING_PORT=6881
+      - PUID=1000
+      - PGID=1000
     healthcheck:
       start_period: 15s
     env_file:
