--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,7 @@ services:
     volumes:
       - qbittorrent_config:/config
       - downloads:/downloads
+      - qbittorrent_cache:/config/.cache/qBittorrent
     environment:
       - WEBUI_PORT=8080
       - TORRENTING_PORT=6881
@@ -461,3 +462,9 @@ volumes:
       type: nfs
       o: "addr=10.20.10.27,rw,nolock,soft"
       device: ":/volume1/DATA/Emby/config"
+
+  qbittorrent_cache:
+    driver_opts:
+      type: nfs
+      o: "addr=10.20.10.27,rw,nolock,soft"
+      device: ":/volume1/DATA/qbittorrent-cache"
